--- a/expo_app/package.json
+++ b/expo_app/package.json
@@ -12,24 +12,38 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-    "expo": "~51.0.8",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-seoul/masonry-list": "^1.4.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "@supabase/supabase-js": "^2.43.4",
+    "axios": "^1.7.2",
+    "expo": "~51.0.14",
+    "expo-auth-session": "~5.5.2",
+    "expo-constants": "~16.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-web": "~0.19.10"
+    "react-native": "^0.74.2",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-dotenv": "^0.2.2",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.0.0",
     "jest": "^29.7.0",
     "jest-expo": "^51.0.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
