--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 APP_ID=315380454844228
 APP_SECRET=67e68f29ffacca472ca6e2fb4a788fa9
-REDIRECT_URI=http://localhost:3000/auth/facebook/callback
+REDIRECT_URI=https://miamiaapp-ronjakovero-ronjakoveros-projects.vercel.app/auth/facebook/callback
