--- a/expo_app/app.json
+++ b/expo_app/app.json
@@ -3,6 +3,7 @@
     "name": "expo_app",
     "slug": "expo_app",
     "version": "1.0.0",
+    "scheme": "myapp",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
