--- a/expo_app/package.json
+++ b/expo_app/package.json
@@ -18,20 +18,20 @@
     "@react-navigation/stack": "^6.3.29",
     "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.7.2",
-    "expo": "~51.0.14",
+    "expo": "^51.0.18",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.2",
+    "react-native": "^0.74.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6",
-    "expo-web-browser": "~13.0.3"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -43,7 +43,7 @@
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.0.0",
     "jest": "^29.7.0",
-    "jest-expo": "^51.0.2",
+    "jest-expo": "^51.0.3",
     "typescript": "~5.3.3"
   },
   "private": true
