--- a/expo_app/package.json
+++ b/expo_app/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo-google-fonts/outfit": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-seoul/masonry-list": "^1.4.2",
@@ -21,6 +22,7 @@
     "expo": "^51.0.18",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.8",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
@@ -31,7 +33,8 @@
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "expo-splash-screen": "~0.27.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
