--- a/expo_app/package.json
+++ b/expo_app/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@expo-google-fonts/outfit": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-seoul/masonry-list": "^1.4.2",
-    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.3.29",
     "@supabase/supabase-js": "^2.43.4",
     "axios": "^1.7.2",
@@ -23,18 +26,22 @@
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.8",
+    "expo-image": "^1.12.13",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-dotenv": "^3.4.11",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-gesture-handler": "^2.18.0",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
-    "expo-splash-screen": "~0.27.5"
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
