--- a/expo_app/app.json
+++ b/expo_app/app.json
@@ -23,6 +23,11 @@
     },
     "web": {
       "favicon": "./src/assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "c59934c7-494c-4d74-bc9a-edac7dd6013b"
+      }
     }
   }
 }
